Upgrade the profiling for convolution DDI Log: GemmbasedConvolution, Exec flag(late binding)
test

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -348,7 +348,7 @@
     "\n",
     "def create_ddiConv_json(root_path,filename):\n",
     "    ddi_file = os.path.join(root_path, filename)\n",
-    "    json_file = os.path.join(root_path, filename.replace(\"log\",\"json\"))\n",
+    "    json_file = os.path.join(root_path, filename.replace(\"log\",\"_conv.json\"))\n",
     "    dic ={}\n",
     "    openf =  open(ddi_file, \"r\")\n",
     "\n",
@@ -363,14 +363,15 @@
     "            \n",
     "            kernel_name_idx = -1\n",
     "            for k in range(11):\n",
-    "                if \"Conv Kernel:\" in lines[i-k]:\n",
+    "                if \"Conv Kernel:\" in lines[i-k] \\\n",
+    "                    or \"Gemm Kernel:\" in lines[i-k]:  # for the case of GemmBasedConvolution \n",
     "                    kernel_name_idx = i-k\n",
     "                    # print(lines[kernel_name_idx])\n",
     "                    # print(kernel_name_idx)\n",
     "                    break\n",
     "                if k == 10:\n",
     "                    assert(\"no conv kernel\")\n",
-    "\n",
+    "                    \n",
     "            kernel_name = lines[kernel_name_idx].rstrip().split(\"Kernel:\")[-1]\n",
     "            #print(mc_type, kernel_name)\n",
     "            if mc_type not in dic.keys():\n",
@@ -381,13 +382,13 @@
     "            layout_idx = -1\n",
     "            dim_idx = -1\n",
     "            param_str = []\n",
-    "            for k in range(6):\n",
+    "            for k in range(8):\n",
     "                dim_idx = kernel_name_idx-k\n",
     "                layout_idx = kernel_name_idx - k+2\n",
     "                param_str =  re.findall(r'0x\\w+', lines[dim_idx])\n",
-    "                if len(param_str) > 5:\n",
+    "                if len(param_str) > 5 \\\n",
+    "                    and \"Filter\" in lines[dim_idx]:  # for the case of GemmBasedConvolution\n",
     "                    break\n",
-    "            \n",
     "          \n",
     "            # print(dim_idx, lines[dim_idx])   \n",
     "            # print(param_str)\n",
@@ -398,6 +399,7 @@
     "            layout_str = \"\"\n",
     "            #print(lines[layout_idx].rstrip(), layout_idx,kernel_name_idx)\n",
     "            layout_str = re.findall(r'N\\w+', lines[layout_idx])\n",
+    "            #print(kernel_name_idx, lines[dim_idx], lines[layout_idx])\n",
     "\n",
     "            ''' some log  BiasDesc = isNull'''\n",
     "            output_shape = []\n",
@@ -435,16 +437,27 @@
     "\n",
     "            \n",
     "            group_count =int( re.findall(r'0x\\w+', lines[outputdesc_idx+40])[0],16)\n",
+    "            \n",
     "            info_dic ={}\n",
     "            info_dic[\"input\"] = {\"shape\": param_list[1:5], \"layout\": layout_str[0], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[i+6])[0], \"stride\": input_stride, \"padding\": input_padding}\n",
     "            info_dic[\"filter\"] = {\"shape\": param_list[5:9], \"layout\": layout_str[1], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5 + 19])[0],\"flag\": re.findall(r'\\((.*?)\\)', lines[i+6+19])[0],\"stirde\": filter_stride, \"dilation\":filter_dilation,  \"groupcount\": group_count}\n",
     "            info_dic[\"output\"] = {\"shape\":output_shape, \"layout\": layout_str[2], \"datatype\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+1])[0],\"flag\":re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+2])[0], \"stride\": output_stride,\"padding\":outputpadding_list}\n",
     "            info_dic[\"direction\"] = re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+20])[0]\n",
     "            \n",
+    "            exec_flag_idx = 0\n",
     "            if \"Function\" in lines[outputdesc_idx+42]:\n",
     "                info_dic[\"activation\"] =  re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+42])[0]\n",
+    "                exec_flag_idx = outputdesc_idx+46\n",
     "            else:\n",
     "                info_dic[\"activation\"] = \"isnull\"\n",
+    "                exec_flag_idx = outputdesc_idx+44\n",
+    "            \n",
+    "            exec_flag_info = re.findall(r'0x\\w+', lines[exec_flag_idx])\n",
+    "            if len(exec_flag_info) > 0:\n",
+    "                info_dic[\"exec_flag\"] = int( exec_flag_info[0],16)\n",
+    "            else:\n",
+    "                info_dic[\"exec_flag\"] = 0\n",
+    "                \n",
     "            dic[mc_type][kernel_name].append(info_dic)\n",
     "            \n",
     "            \n",
@@ -727,16 +740,16 @@
     "import glob\n",
     "import pandas as pd\n",
     "import os\n",
-    "root_path = r\"C:\\Users\\GAME\\Documents\\Project\\helpWindow\\szymon\"\n",
-    "files = glob.glob(root_path+\"\\\\*.json\")\n",
+    "root_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe_Denoise\\analyze\"\n",
+    "files = glob.glob(root_path+\"\\\\DDI_opt.json\")\n",
     "\n",
-    "csv_file = os.path.join(root_path,\"szymon.csv\")\n",
+    "csv_file = os.path.join(root_path,\"DDI_opt.csv\")\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer =csv.writer(csvf)\n",
     "line = [\"model_name\", \"kernel_name\",\"input_shape_n\",\"input_shape_c\",\"input_shape_h\",\"input_shape_w\", \"input_layout\", \"input_datatype\",\"input_flag\",\"input_padding\",\\\n",
     "        \"filter_shape_n\",\"filter_shape_c\",\"filter_shape_h\",\"filter_shape_w\", \"filter_layout\", \"filter_datatype\",\"filter_flag\", \"filter_stride_h\", \"filter_stride_w\", \"filter_stride_c\", \"filter_dilation_h\", \"filter_dilation_w\", \"filter_dilation_c\", \"filter_groupcount\",\n",
     "        \"output_shape_n\",\"output_shape_c\",\"output_shape_h\",\"output_shape_w\", \"output_layout\", \"output_datatype\",\"output_flag\", \"output_padding\", \n",
-    "         \"direction\", \"activation\" ]\n",
+    "         \"direction\", \"activation\" ,\"exec_flag\"]\n",
     "writer.writerow(line)\n",
     "for file in files:\n",
     "    basename = os.path.basename(file)\n",
@@ -767,11 +780,12 @@
     "\n",
     "            direction = conv[key][i][\"direction\"]\n",
     "            activation = conv[key][i][\"activation\"]\n",
+    "            exec_flag = conv[key][i][\"exec_flag\"]\n",
     "\n",
     "            writer.writerow([basename, kernel_name, input_shape[0], input_shape[1], input_shape[2], input_shape[3], input_layout, input_datatype, input_flag,input_padding,\\\n",
     "                              filter_shape[0],filter_shape[1],filter_shape[2],filter_shape[3], filter_layout, filter_datatype, filter_flag, filter_stride[0], filter_stride[1],filter_stride[2],filter_dilation[0],filter_dilation[1],filter_dilation[2], filter_groupcount, \\\n",
     "                                output_shape[0],output_shape[1],output_shape[2],output_shape[3], output_layout, output_datatype, output_flag, output_padding,\n",
-    "                                direction, activation])\n",
+    "                                direction, activation, exec_flag])\n",
     "    \n",
     "csvf.close()"
    ]
