--- a/tool.ipynb
+++ b/tool.ipynb
@@ -389,13 +389,13 @@
     "                if len(param_str) > 5 \\\n",
     "                    and \"Filter\" in lines[dim_idx]:  # for the case of GemmBasedConvolution\n",
     "                    break\n",
-    "          \n",
+    "\n",
     "            # print(dim_idx, lines[dim_idx])   \n",
     "            # print(param_str)\n",
     "            param_list = []\n",
     "            for idx, val in enumerate(param_str):\n",
     "                param_list.append(int(val, 16))\n",
-    "\n",
+    "            \n",
     "            layout_str = \"\"\n",
     "            #print(lines[layout_idx].rstrip(), layout_idx,kernel_name_idx)\n",
     "            layout_str = re.findall(r'N\\w+', lines[layout_idx])\n",
@@ -404,10 +404,12 @@
     "            ''' some log  BiasDesc = isNull'''\n",
     "            output_shape = []\n",
     "            if \"IsNull\" in lines[i+5+38]:\n",
+    "                bias_value = \"isnull\"\n",
     "                outputdesc_idx = i+5+38+2\n",
     "                output_shape = param_list[9:13]\n",
     "            else:\n",
     "                outputdesc_idx = i+5+19+38\n",
+    "                bias_value = param_list[9:13]\n",
     "                output_shape =  param_list[13:17]\n",
     "\n",
     "            input_stride = []\n",
@@ -442,6 +444,7 @@
     "            info_dic[\"input\"] = {\"shape\": param_list[1:5], \"layout\": layout_str[0], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5])[0], \"flag\": re.findall(r'\\((.*?)\\)', lines[i+6])[0], \"stride\": input_stride, \"padding\": input_padding}\n",
     "            info_dic[\"filter\"] = {\"shape\": param_list[5:9], \"layout\": layout_str[1], \"datatype\": re.findall(r'\\((.*?)\\)', lines[i+5 + 19])[0],\"flag\": re.findall(r'\\((.*?)\\)', lines[i+6+19])[0],\"stirde\": filter_stride, \"dilation\":filter_dilation,  \"groupcount\": group_count}\n",
     "            info_dic[\"output\"] = {\"shape\":output_shape, \"layout\": layout_str[2], \"datatype\": re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+1])[0],\"flag\":re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+2])[0], \"stride\": output_stride,\"padding\":outputpadding_list}\n",
+    "            info_dic[\"bias\"] = bias_value\n",
     "            info_dic[\"direction\"] = re.findall(r'\\((.*?)\\)', lines[outputdesc_idx+20])[0]\n",
     "            \n",
     "            exec_flag_idx = 0\n",
@@ -740,16 +743,16 @@
     "import glob\n",
     "import pandas as pd\n",
     "import os\n",
-    "root_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe_Denoise\\analyze\"\n",
-    "files = glob.glob(root_path+\"\\\\DDI_opt.json\")\n",
+    "root_path = r\"C:\\Users\\GAME\\Documents\\Project\\Adobe\\DDIlog\\model_Sept\"\n",
+    "files = glob.glob(root_path+\"\\\\*_conv.json\")\n",
     "\n",
-    "csv_file = os.path.join(root_path,\"DDI_opt.csv\")\n",
+    "csv_file = os.path.join(root_path,\"DDI_conv.csv\")\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer =csv.writer(csvf)\n",
     "line = [\"model_name\", \"kernel_name\",\"input_shape_n\",\"input_shape_c\",\"input_shape_h\",\"input_shape_w\", \"input_layout\", \"input_datatype\",\"input_flag\",\"input_padding\",\\\n",
     "        \"filter_shape_n\",\"filter_shape_c\",\"filter_shape_h\",\"filter_shape_w\", \"filter_layout\", \"filter_datatype\",\"filter_flag\", \"filter_stride_h\", \"filter_stride_w\", \"filter_stride_c\", \"filter_dilation_h\", \"filter_dilation_w\", \"filter_dilation_c\", \"filter_groupcount\",\n",
     "        \"output_shape_n\",\"output_shape_c\",\"output_shape_h\",\"output_shape_w\", \"output_layout\", \"output_datatype\",\"output_flag\", \"output_padding\", \n",
-    "         \"direction\", \"activation\" ,\"exec_flag\"]\n",
+    "        \"bias\", \"direction\", \"activation\" ,\"exec_flag\"]\n",
     "writer.writerow(line)\n",
     "for file in files:\n",
     "    basename = os.path.basename(file)\n",
@@ -778,6 +781,7 @@
     "            output_flag = conv[key][i][\"output\"][\"flag\"]\n",
     "            output_padding = [int(v) for v in conv[key][i][\"output\"][\"padding\"]]\n",
     "\n",
+    "            bias = conv[key][i][\"bias\"]\n",
     "            direction = conv[key][i][\"direction\"]\n",
     "            activation = conv[key][i][\"activation\"]\n",
     "            exec_flag = conv[key][i][\"exec_flag\"]\n",
@@ -785,7 +789,7 @@
     "            writer.writerow([basename, kernel_name, input_shape[0], input_shape[1], input_shape[2], input_shape[3], input_layout, input_datatype, input_flag,input_padding,\\\n",
     "                              filter_shape[0],filter_shape[1],filter_shape[2],filter_shape[3], filter_layout, filter_datatype, filter_flag, filter_stride[0], filter_stride[1],filter_stride[2],filter_dilation[0],filter_dilation[1],filter_dilation[2], filter_groupcount, \\\n",
     "                                output_shape[0],output_shape[1],output_shape[2],output_shape[3], output_layout, output_datatype, output_flag, output_padding,\n",
-    "                                direction, activation, exec_flag])\n",
+    "                                bias, direction, activation, exec_flag])\n",
     "    \n",
     "csvf.close()"
    ]
