Fix DDILOG parsing for GEMM

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -508,15 +508,16 @@
     "            mc_type = lines[i].rstrip().split(\"type :\")[-1]\n",
     "            kernel_name_idx = -1\n",
     "            kernel_name = \"\"\n",
-    "            for k in range(7):\n",
+    "            for k in range(10):\n",
     "                if \"Gemm Kernel:\" in lines[i-k]:\n",
     "                    kernel_name_idx = i-k\n",
     "                    kernel_name = lines[kernel_name_idx].rstrip().split(\"Kernel:\")[-1]\n",
     "                    break\n",
-    "                if k == 6:\n",
+    "                if k == 8:  # max search = 6 if not using cache shader ; max search = 6+ 1 if using cache shader\n",
     "                    kernel_name_idx = i-4\n",
     "                    kernel_name = \"unknown\"\n",
-    "                    assert(\"no gemm kernel\")\n",
+    "                    print(\"no gemm kernel\")\n",
+    "                    assert(False)\n",
     "\n",
     "            #print(mc_type, kernel_name)\n",
     "            if mc_type not in dic.keys():\n",
@@ -526,7 +527,9 @@
     "            \n",
     "            dim_idx = kernel_name_idx - 2\n",
     "            param_str =  re.findall(r'0x\\w+', lines[dim_idx])\n",
-    "            \n",
+    "            if len(param_str) < 10:\n",
+    "                assert(False)\n",
+    "\n",
     "            param_list = []\n",
     "            for idx, val in enumerate(param_str):\n",
     "                param_list.append(int(val, 16))\n",
