Upgrade file parsing for PIX Log

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -968,7 +968,7 @@
     "#  \n",
     "## Option 2:\n",
     "#  use the algorithm below to find first iteration and second iteration\n",
-    "#  but mostly the time it does not work\n",
+    "#  but most of the time it does not work\n",
     "'''\n",
     "for index, line in rawdata.iterrows():\n",
     "    if signal_count == 5:\n",
@@ -1034,7 +1034,10 @@
     "\n",
     "for op,time in zip(dispatch_operator_list,dispatch_time):\n",
     "    layer_info = op.split(\",\")[-1]\n",
-    "    mark_idx = layer_info.index(\"(\")\n",
+    "    if \"(\" in layer_info:\n",
+    "        mark_idx = layer_info.index(\"(\")\n",
+    "    else:# some op may not have infomation in (), e.g.DML_OPERATOR_ACTIVATION_GELU\n",
+    "        mark_idx = -1\n",
     "    layer_type = layer_info[0:mark_idx-1]\n",
     "    layer_name = layer_info[mark_idx+1:-1]\n",
     "    writer.writerow([\"Dispatch\",layer_type, layer_name,round(float(time)/1000000,2)])\n",
