--- a/tool.ipynb
+++ b/tool.ipynb
@@ -788,7 +788,9 @@
     "            direction = conv[key][i][\"direction\"]\n",
     "            activation = conv[key][i][\"activation\"]\n",
     "            exec_flag = conv[key][i][\"exec_flag\"]\n",
-    "\n",
+    "            row_index +=1\n",
+    "            if row_index % 2 ==0: #remove the repeated Conv info, may need to double check if there is some modification in application(ort or dml or driver)\n",
+    "                continue\n",
     "            writer.writerow([basename, kernel_name, input_shape[0], input_shape[1], input_shape[2], input_shape[3], input_layout, input_datatype, input_flag,input_padding,\\\n",
     "                              filter_shape[0],filter_shape[1],filter_shape[2],filter_shape[3], filter_layout, filter_datatype, filter_flag, filter_stride[0], filter_stride[1],filter_stride[2],filter_dilation[0],filter_dilation[1],filter_dilation[2], filter_groupcount, \\\n",
     "                                output_shape[0],output_shape[1],output_shape[2],output_shape[3], output_layout, output_datatype, output_flag, output_padding,\n",
