Add script for Latency comparison for individual types of operators

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -1038,15 +1038,226 @@
     "    layer_info = op.split(\",\")[-1]\n",
     "    if \"(\" in layer_info:\n",
     "        mark_idx = layer_info.index(\"(\")\n",
+    "        layer_type = layer_info[0:mark_idx-1]\n",
+    "        layer_name = layer_info[mark_idx+1:-1]\n",
     "    else:# some op may not have infomation in (), e.g.DML_OPERATOR_ACTIVATION_GELU\n",
-    "        mark_idx = -1\n",
-    "    layer_type = layer_info[0:mark_idx-1]\n",
-    "    layer_name = layer_info[mark_idx+1:-1]\n",
+    "        mark_idx = 0\n",
+    "        layer_type = layer_info[0:]\n",
+    "        layer_name = \"unknown\"\n",
     "    writer.writerow([\"Dispatch\",layer_type, layer_name,round(float(time)/1000000,2)])\n",
     "\n",
     "\n",
     "csvf.close()\n",
     "print(\"{} generated\".format(csv_file))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to do Latency comparison for individual types of operators\n",
+    "## Step 1: collect DML perf(from PIX log), OV perf(From [Extract OV performance data] section)\n",
+    "## Step 2: combine layer name with DML perf and OV perf, may need to manually check\n",
+    "## Step 3: collect input shape, output shape info for each layer \n",
+    "### Option 1: extract onnxruntime profiling with the command line below\n",
+    "* take the unet model as an example, `onnxruntime_perf_test.exe -m times -r 1 -f unet_sample_batch:2 -f unet_sample_channels:4 -f unet_sample_width:64 -f unet_sample_height:64 -f unet_hidden_batch:2 -f unet_hidden_sequence:77 -I -u temp.onnx -p ort_profiling.json -e dml model_path`\n",
+    "  - `-u` is used to avoid only one DML fused node is dummped\n",
+    "  - `-p` is used to generate information like layer name, input and output shape.\n",
+    "* Convert ort profling json to csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# index value in profile is same with allocator_planner.cc\n",
+    "# index value in tensor allocation is different, where is it?\n",
+    "time_file = r'C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\\ort_profiling.json_2023-10-11_15-03-03.json'\n",
+    "csv_file = time_file.replace(\"json\", 'csv')\n",
+    "csvf = open(csv_file,\"w\",newline='')\n",
+    "writer = csv.writer(csvf)\n",
+    " # only has three inputs and  one output as defualt, may need to change as needed\n",
+    "line = [\"name\",\"op_type\", \"input1_type\", \"input1_shape\", \"input2_type\", \"input2_shape\",\"input3_type\", \"input3_shape\",\"output_type\",\"output_shape\"]\n",
+    "writer.writerow(line)\n",
+    "count = 0\n",
+    "node_count =0\n",
+    "with open(time_file, 'r') as f:\n",
+    "    # load the contents of the file into a dictionary\n",
+    "    data = json.load(f)\n",
+    "    for i in range(len(data)):\n",
+    "        if \"/conv_in/Conv_fence_before\" in data[i][\"name\"]:\n",
+    "            count += 1\n",
+    "        if count == 2:\n",
+    "            break\n",
+    "        if \"kernel\" in data[i][\"name\"]:     \n",
+    "            op_type = data[i]['args']['op_name']\n",
+    "            output_name = data[i][\"name\"].split(\"_kernel\")[0]\n",
+    "            output_size = data[i]['args']['output_size']\n",
+    "            input_type = [\"none\"]*3\n",
+    "            input_shape = [[]] * 3\n",
+    "            output_type = None\n",
+    "            output_shape = None\n",
+    "            for j, p in enumerate(data[i]['args']['input_type_shape']):\n",
+    "                if j == 3:\n",
+    "                    break\n",
+    "                for key, value in p.items():\n",
+    "                    input_type[j]= key\n",
+    "                    input_shape[j]= value\n",
+    "            for j, p in enumerate(data[i]['args']['output_type_shape']):\n",
+    "                for key, value in p.items():\n",
+    "                    output_type = key\n",
+    "                    output_shape = value\n",
+    "                    break\n",
+    "                break\n",
+    "\n",
+    "            newline = [output_name, op_type, input_type[0],input_shape[0],\\\n",
+    "                       input_type[1],input_shape[1],\n",
+    "                        input_type[2], input_shape[2],\n",
+    "                        output_type,output_shape]\n",
+    "            writer.writerow(newline)\n",
+    "            node_count+=1\n",
+    "csvf.close()\n",
+    "print(\"Done to generate file {}\". format(csv_file))\n",
+    "          "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: combine ORT info with DML and OV performance data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\"\n",
+    "perf_file = \"gemm_perf_dml_ov.txt\"\n",
+    "node_csv = \"ort_profiling.csv_2023-10-11_15-03-03.csv\"\n",
+    "new_file = open(os.path.join(rootpath,\"processed_file.csv\"),\"a\")\n",
+    "node_file =  open(os.path.join(rootpath, node_csv))\n",
+    "used_line_index = []\n",
+    "new_file.write(\"DML, OV, Layer name, op_type, input1_type, input1_shape, input2_type, input2_shape,input3_type, input3_shape,output_type,output_shape\\n\")\n",
+    "for i, nline in enumerate(node_file.readlines()):\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    node_info = nline.split(\",\")\n",
+    "    layer_name = node_info[0]\n",
+    "    #print(layer_name)\n",
+    "    ddi_file = open(os.path.join(rootpath, perf_file))\n",
+    "    for j, dline in enumerate(ddi_file.readlines()):\n",
+    "        if j == 0:\n",
+    "            continue\n",
+    "        info_list = dline.rstrip().split(\",\")      \n",
+    "        perf_layer_name = info_list[0]\n",
+    "        #print(filter_shape)\n",
+    "        #print(info_list)\n",
+    "        if layer_name in perf_layer_name \\\n",
+    "            and j not in used_line_index:\n",
+    "            used_line_index.append(j)\n",
+    "            newline = \",\".join(info_list[1:])+\",\"+nline\n",
+    "            new_file.write(newline)\n",
+    "    ddi_file.close()\n",
+    "node_file.close()\n",
+    "new_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option2: \n",
+    "* hack into netron to dump model information: layer name, weight shape etc.\n",
+    "* However, information about input shape cannot be captured because it is calculated in runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\"\n",
+    "ddi_csv = \"DDI_conv.csv\"\n",
+    "node_csv = \"unet_onnx_info.csv\"\n",
+    "new_file = open(os.path.join(rootpath,\"processed_file.csv\"),\"a\")\n",
+    "node_file =  open(os.path.join(rootpath, node_csv))\n",
+    "\n",
+    "used_line_index = []\n",
+    "new_file.write(\"Layer name,DML,OV, model_name,kernel_name,input_shape_n,input_shape_c,input_shape_h,input_shape_w,input_layout,input_datatype,input_flag,input_padding,filter_shape_n,filter_shape_c,filter_shape_h,filter_shape_w,filter_layout,filter_datatype,filter_flag,filter_stride_h,filter_stride_w,filter_stride_c,filter_dilation_h,filter_dilation_w,filter_dilation_c,filter_groupcount,output_shape_n,output_shape_c,output_shape_h,output_shape_w,output_layout,output_datatype,output_flag,output_padding,bias,direction,activation,exec_flag\")\n",
+    "for i, nline in enumerate(node_file.readlines()):\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    node_info = nline.split(\";\")\n",
+    "    layer_name = node_info[0]\n",
+    "    shape = node_info[-1].rstrip().split(\",\")\n",
+    "    if len(shape) == 4 :\n",
+    "        shape = node_info[-1].rstrip()\n",
+    "        #print(shape)\n",
+    "        ddi_file = open(os.path.join(rootpath, ddi_csv))\n",
+    "        for j, dline in enumerate(ddi_file.readlines()):\n",
+    "            if j == 0:\n",
+    "                continue\n",
+    "            info_list = dline.rstrip().split(\",\")      \n",
+    "            filter_shape = \"[\"+\",\".join(info_list[15:19])+\"]\"\n",
+    "            #print(filter_shape)\n",
+    "           \n",
+    "            if shape == filter_shape \\\n",
+    "                  and j not in used_line_index:\n",
+    "                if \"proj_in\" in layer_name and info_list[6] == \"NHWC\":\n",
+    "                    continue\n",
+    "                used_line_index.append(j)\n",
+    "\n",
+    "                newline = \",\".join(node_info[0:3]) + \",\"+dline\n",
+    "                new_file.write(newline)\n",
+    "\n",
+    "new_file.close()\n",
+    "\n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Link ort csv with other performance data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Pivot table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\"\n",
+    "log_file = \"unet_PIX.txt\"\n",
+    "file = os.path.join(rootpath, log_file)\n",
+    "file = file.strip(\".txt\")\n",
+    "\n",
+    "csv_file = f\"{file}_test.csv\"\n",
+    "data = pd.read_csv(csv_file)\n",
+    "df = pd.DataFrame(data)\n",
+    "pivot_table = df.pivot_table(values='time', index=['layer type','execute type'], aggfunc='sum')\n",
+    "print(pivot_table)"
    ]
   },
   {
@@ -1254,53 +1465,6 @@
     "        \n",
     "        \n",
     "csvf.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get shape\n",
-    "# index value in profile is same with allocator_planner.cc\n",
-    "# index value in tensor allocation is different, where is it?\n",
-    "time_file = r'C:\\Users\\GAME\\Documents\\Project\\onnxruntime\\build\\Windows\\Debug\\Debug\\file_small.log_2023-06-20_15-08-04.json'\n",
-    "csv_file = time_file.replace(\"json\", 'csv')\n",
-    "csvf = open(csv_file,\"w\",newline='')\n",
-    "writer = csv.writer(csvf)\n",
-    "line = [\"name\",\"op_type\",\"output_size\",\"output_shape\"]\n",
-    "writer.writerow(line)\n",
-    "count = 0\n",
-    "node_count =0\n",
-    "with open(time_file, 'r') as f:\n",
-    "    # load the contents of the file into a dictionary\n",
-    "    data = json.load(f)\n",
-    "    for i in range(len(data)):\n",
-    "        if \"/conv_in/Conv_fence_before\" in data[i][\"name\"]:\n",
-    "            count += 1\n",
-    "        if count == 2:\n",
-    "            break\n",
-    "        if \"kernel\" in data[i][\"name\"]:\n",
-    "           \n",
-    "            output_name = data[i][\"name\"].split(\"_kernel\")[0]\n",
-    "            op_type = data[i]['args']['op_name']\n",
-    "            #print(output_name)\n",
-    "            output_size = data[i]['args']['output_size']\n",
-    "            #print(data[i]['args']['input_type_shape'])\n",
-    "            if \"float16\" in data[i]['args']['output_type_shape'][0].keys():\n",
-    "                output_shape = data[i]['args']['output_type_shape'][0][\"float16\"] # only one output\n",
-    "            else:\n",
-    "                continue\n",
-    "            # if \"int64\" in data[i]['args']['output_type_shape'][0].keys():\n",
-    "            #     output_shape = data[i]['args']['output_type_shape'][0][\"int64\"]\n",
-    "            newline = [output_name, op_type, output_size,output_shape]\n",
-    "            writer.writerow(newline)\n",
-    "            node_count+=1\n",
-    "print(node_count)\n",
-    "csvf.close()\n",
-    "          \n",
-    "          "
    ]
   },
   {
