Update script for latency comparsion of per layer

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -757,6 +757,7 @@
     "        \"output_shape_n\",\"output_shape_c\",\"output_shape_h\",\"output_shape_w\", \"output_layout\", \"output_datatype\",\"output_flag\", \"output_padding\", \n",
     "        \"bias\", \"direction\", \"activation\" ,\"exec_flag\"]\n",
     "writer.writerow(line)\n",
+    "row_index = 0\n",
     "for file in files:\n",
     "    basename = os.path.basename(file)\n",
     "    df = pd.read_json(file)\n",
@@ -1075,7 +1076,9 @@
     "\n",
     "# index value in profile is same with allocator_planner.cc\n",
     "# index value in tensor allocation is different, where is it?\n",
-    "time_file = r'C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\\ort_profiling.json_2023-10-11_15-03-03.json'\n",
+    "import csv\n",
+    "import json\n",
+    "time_file = r'C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\\new_issue\\profiling.json_2023-10-12_11-33-55.json'\n",
     "csv_file = time_file.replace(\"json\", 'csv')\n",
     "csvf = open(csv_file,\"w\",newline='')\n",
     "writer = csv.writer(csvf)\n",
@@ -1137,42 +1140,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "# Take layer name as a unique key\n",
     "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\"\n",
-    "perf_file = \"gemm_perf_dml_ov.txt\"\n",
-    "node_csv = \"ort_profiling.csv_2023-10-11_15-03-03.csv\"\n",
-    "new_file = open(os.path.join(rootpath,\"processed_file.csv\"),\"a\")\n",
+    "perf_file = \"new_unet_onnx_info.csv\" # this is a file has [Layer name, DML perf, OV perf]\n",
+    "node_csv = r\"new_issue\\profiling.csv_2023-10-12_11-33-55.csv\"\n",
+    "new_file = open(os.path.join(rootpath,perf_file+\".csv\"),\"w\")\n",
     "node_file =  open(os.path.join(rootpath, node_csv))\n",
     "used_line_index = []\n",
-    "new_file.write(\"DML, OV, Layer name, op_type, input1_type, input1_shape, input2_type, input2_shape,input3_type, input3_shape,output_type,output_shape\\n\")\n",
+    "new_file.write(\"DML, OV, input1_layout,Layer name, op_type,  input1_type, input1_shape, input2_type, input2_shape,input3_type, input3_shape,output_type,output_shape\\n\")\n",
     "for i, nline in enumerate(node_file.readlines()):\n",
     "    if i == 0:\n",
     "        continue\n",
     "    node_info = nline.split(\",\")\n",
     "    layer_name = node_info[0]\n",
-    "    #print(layer_name)\n",
     "    ddi_file = open(os.path.join(rootpath, perf_file))\n",
     "    for j, dline in enumerate(ddi_file.readlines()):\n",
     "        if j == 0:\n",
     "            continue\n",
     "        info_list = dline.rstrip().split(\",\")      \n",
     "        perf_layer_name = info_list[0]\n",
-    "        #print(filter_shape)\n",
-    "        #print(info_list)\n",
-    "        if layer_name in perf_layer_name \\\n",
+    "        input_layout = \"NONE\"\n",
+    "        if \"Conv\" in node_info[1]:\n",
+    "            # check layout\n",
+    "            # this layout is not aligned with DDI LOG\n",
+    "            # Because DML may have optimization like NCHW <=> HLSL Layout conversion + NHWC\n",
+    "            pattern = re.compile(r'\\[([^\\]]+)\\]')\n",
+    "            matches = pattern.findall(nline)\n",
+    "            input_shape = matches[0].split(\",\")\n",
+    "            if input_shape[2] == input_shape[3]:\n",
+    "                input_layout = \"NCHW\"\n",
+    "            else:\n",
+    "                input_layout = \"NHWC\"\n",
+    "        if layer_name == perf_layer_name \\\n",
     "            and j not in used_line_index:\n",
-    "            used_line_index.append(j)\n",
-    "            newline = \",\".join(info_list[1:])+\",\"+nline\n",
+    "            used_line_index.append(j)       \n",
+    "            newline = \",\".join(info_list[1:3])+\",\"+input_layout+\",\"+nline\n",
     "            new_file.write(newline)\n",
+    "            #break\n",
     "    ddi_file.close()\n",
     "node_file.close()\n",
     "new_file.close()"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convolution: link to DDI log\n",
+    "# Take \"input_shape, filter_shape, output_shaper\" as a unique key\n",
+    "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\"\n",
+    "ddi_csv = r\"DDI_conv.csv\"\n",
+    "ort_perf_csv = \"unet_onnx_info.csv.csv\"\n",
+    "ort_perf_file =  open(os.path.join(rootpath, ort_perf_csv))\n",
+    "new_file = open(os.path.join(rootpath,ort_perf_csv+\"_ddi.csv\"),\"w\")\n",
+    "\n",
+    "new_file.write(\"Status, DML,OV, input1_layout,Layer name,model_name,kernel_name,input_shape_n,input_shape_c,input_shape_h,input_shape_w,input_layout,input_datatype,input_flag,input_padding,filter_shape_n,filter_shape_c,filter_shape_h,filter_shape_w,filter_layout,filter_datatype,filter_flag,filter_stride_h,filter_stride_w,filter_stride_c,filter_dilation_h,filter_dilation_w,filter_dilation_c,filter_groupcount,output_shape_n,output_shape_c,output_shape_h,output_shape_w,output_layout,output_datatype,output_flag,output_padding,bias,direction,activation,exec_flag \\n\")\n",
+    "used_line_index = []\n",
+    "matched_count = 0\n",
+    "rest_count = 0\n",
+    "for i, nline in enumerate(ort_perf_file.readlines()):\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    pattern = re.compile(r'\\[([^\\]]+)\\]')\n",
+    "    matches = pattern.findall(nline)\n",
+    "    ort_input_shape = matches[0]\n",
+    "    ort_filter_shape = matches[1]\n",
+    "    ort_output_shape = matches[-1]\n",
+    "    op_type = nline.split(\",\")[4]\n",
+    "\n",
+    "    nline_new = \",\".join(nline.split(\",\")[:4])\n",
+    "    matched_list = []\n",
+    "    temp_used_line_index= []\n",
+    "    if  op_type == \"Conv\" :\n",
+    "        shape = node_info[-1].rstrip()\n",
+    "        #print(shape)\n",
+    "        ddi_file = open(os.path.join(rootpath, ddi_csv))\n",
+    "        for j, dline in enumerate(ddi_file.readlines()):\n",
+    "            if j == 0:\n",
+    "                continue           \n",
+    "            info_list = dline.rstrip().split(\",\")\n",
+    "            input_shape  = \", \".join(info_list[2:6])\n",
+    "            filter_shape = \", \".join(info_list[15:19])\n",
+    "            output_shape = \", \".join(info_list[29:33])\n",
+    "            #print(input_shape, ort_input_shape)\n",
+    "            #print(filter_shape, ort_filter_shape)\n",
+    "            #print(output_shape, ort_output_shape)\n",
+    "            if ort_input_shape == input_shape  \\\n",
+    "                    and ort_filter_shape == filter_shape \\\n",
+    "                    and ort_output_shape == output_shape \\\n",
+    "                     and j not in used_line_index:\n",
+    "                temp_used_line_index.append(j)             \n",
+    "                matched_list.append(dline)\n",
+    "        no_repeat_match = list(set(matched_list))\n",
+    "        if len(no_repeat_match) == 1: # if ddi log is same, then assign one directly\n",
+    "            matched_count += 1\n",
+    "            used_line_index.append(temp_used_line_index[0])\n",
+    "            newline = \"Valid,\"+nline_new + \",\"+no_repeat_match[0]\n",
+    "            new_file.write(newline)\n",
+    "        else:\n",
+    "            #print(\"{} cannot find\".format(nline_new))\n",
+    "            rest_count +=1\n",
+    "            for item in no_repeat_match:\n",
+    "                newline = \"Uncertian,\"+nline_new + \",\"+ item\n",
+    "                new_file.write(newline)\n",
+    "\n",
+    "new_file.close()\n",
+    "print(\"Summary:\\n \\\n",
+    "      {}/{} find a unique record of DDI LOG \\n \\\n",
+    "      rest {} Convs find multiple records of DDI LOGS \". format(matched_count, matched_count+rest_count, rest_count))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Option2: \n",
+    "### Option2(Depreciate): \n",
     "* hack into netron to dump model information: layer name, weight shape etc.\n",
     "* However, information about input shape cannot be captured because it is calculated in runtime"
    ]
@@ -1187,18 +1272,19 @@
     "import os\n",
     "import re\n",
     "rootpath = r\"C:\\Users\\GAME\\Documents\\Project\\AIGC\\2023Q4_Profiling_sd1.5\"\n",
-    "ddi_csv = \"DDI_conv.csv\"\n",
-    "node_csv = \"unet_onnx_info.csv\"\n",
-    "new_file = open(os.path.join(rootpath,\"processed_file.csv\"),\"a\")\n",
+    "ddi_csv = r\"new_issue\\new_DDI_conv.csv\"\n",
+    "node_csv = \"new_unet_onnx_info.csv\"\n",
+    "new_file = open(os.path.join(rootpath,node_csv+\".csv\"),\"w\")\n",
     "node_file =  open(os.path.join(rootpath, node_csv))\n",
     "\n",
     "used_line_index = []\n",
-    "new_file.write(\"Layer name,DML,OV, model_name,kernel_name,input_shape_n,input_shape_c,input_shape_h,input_shape_w,input_layout,input_datatype,input_flag,input_padding,filter_shape_n,filter_shape_c,filter_shape_h,filter_shape_w,filter_layout,filter_datatype,filter_flag,filter_stride_h,filter_stride_w,filter_stride_c,filter_dilation_h,filter_dilation_w,filter_dilation_c,filter_groupcount,output_shape_n,output_shape_c,output_shape_h,output_shape_w,output_layout,output_datatype,output_flag,output_padding,bias,direction,activation,exec_flag\")\n",
+    "new_file.write(\"Layer name,DML,OV, model_name,kernel_name,input_shape_n,input_shape_c,input_shape_h,input_shape_w,input_layout,input_datatype,input_flag,input_padding,filter_shape_n,filter_shape_c,filter_shape_h,filter_shape_w,filter_layout,filter_datatype,filter_flag,filter_stride_h,filter_stride_w,filter_stride_c,filter_dilation_h,filter_dilation_w,filter_dilation_c,filter_groupcount,output_shape_n,output_shape_c,output_shape_h,output_shape_w,output_layout,output_datatype,output_flag,output_padding,bias,direction,activation,exec_flag\\n\")\n",
     "for i, nline in enumerate(node_file.readlines()):\n",
     "    if i == 0:\n",
     "        continue\n",
     "    node_info = nline.split(\";\")\n",
     "    layer_name = node_info[0]\n",
+    "\n",
     "    shape = node_info[-1].rstrip().split(\",\")\n",
     "    if len(shape) == 4 :\n",
     "        shape = node_info[-1].rstrip()\n",
@@ -1207,31 +1293,24 @@
     "        for j, dline in enumerate(ddi_file.readlines()):\n",
     "            if j == 0:\n",
     "                continue\n",
+    "            \n",
     "            info_list = dline.rstrip().split(\",\")      \n",
     "            filter_shape = \"[\"+\",\".join(info_list[15:19])+\"]\"\n",
-    "            #print(filter_shape)\n",
-    "           \n",
     "            if shape == filter_shape \\\n",
     "                  and j not in used_line_index:\n",
-    "                if \"proj_in\" in layer_name and info_list[6] == \"NHWC\":\n",
-    "                    continue\n",
+    "                # if (\"proj_in\" in layer_name and info_list[6] == \"NHWC\") \\\n",
+    "                #     or (\"proj_out\" in layer_name and info_list[6] == \"NCHW\"):            \n",
+    "                #     continue\n",
     "                used_line_index.append(j)\n",
-    "\n",
+    "                \n",
     "                newline = \",\".join(node_info[0:3]) + \",\"+dline\n",
     "                new_file.write(newline)\n",
+    "                break\n",
     "\n",
     "new_file.close()\n",
     "\n",
     "\n",
     "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 3: Link ort csv with other performance data\n",
-    "\n"
    ]
   },
   {
