Update the detailed guide

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -944,7 +944,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract PIX info"
+    "# Extract PIX info\n",
+    "* Before using the script below, please cget the PIX log first. You can get step-by-step guide from this recording [PIX GPU capture training-20220314_155822-Meeting Recording.mp4](https://intel.sharepoint.com/sites/applied_ai/_layouts/15/stream.aspx?id=%2Fsites%2Fapplied%5Fai%2FShared%20Documents%2FClient%20AI%2FPIX%20GPU%20capture%20training%2D20220314%5F155822%2DMeeting%20Recording%2Emp4&referrer=StreamWebApp%2EWeb&referrerScenario=AddressBarCopied%2Eview)"
    ]
   },
   {
@@ -1431,7 +1432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract OV performance data\n",
+    "# Extract OpenVINO performance data\n",
     "## Option 1 if you have ort_perf_test.exe debug version:\n",
     "1. set `ORT_OPENVINO_ENABLE_DEBUG=1`, and run `ort_perf_test.exe  -m times -r 1 -I -e openvino -i \"device_type|GPU_FP32 cache_dir|ov_cache\" onnx_model_path`\n",
     "2. some performance logs will be appeared in the command window, here is an example below. You need to manually save it and process into csv file [The script below is some reference but it is not very good]\n",
